# cataplot

./: .gitignore  LICENSE  README.md  pyproject.toml
cataplot/: __init__.py  app.py  app.ui  command_palette.py  menu_filter.py  provider_manager.py  provider_manager.ui  pyside_ui_loader.py  resources.qrc  resources_rc.py  treeview.py
cataplot/providers/: __init__.py  base.py  demo_provider.py
prototyping/: dictview.py  graph_net.py  menufilter.py  model_view.py  tab_widget.py  task_concurrent.py  task_qthread.py
